@@ -21,7 +21,7 @@ import BTrees
 
 from BTrees.Length import Length
 
-from zope.index.interfaces import IInjection, IStatistics
+from zope.index.interfaces import IInjection, IStatistics, IIndexSearch
 from zope.index.keyword.interfaces import IKeywordQuerying
 from zope.interface import implements
 
@@ -31,7 +31,7 @@ class KeywordIndex(Persistent):
 
     family = BTrees.family32
     normalize = True
-    implements(IInjection, IStatistics, IKeywordQuerying)
+    implements(IInjection, IStatistics, IIndexSearch, IKeywordQuerying)
 
     def __init__(self, family=None):
         if family is not None:
@@ -117,7 +117,7 @@ class KeywordIndex(Persistent):
         has_key = idx.has_key
         for word in words:
             if not has_key(word):
-                idx[word] = self.family.II.Set()
+                idx[word] = self.family.IF.Set()
             idx[word].insert(docid)
 
     def _insert_reverse(self, docid, words):
@@ -134,19 +134,35 @@ class KeywordIndex(Persistent):
         if self.normalize:
             query = [w.lower() for w in query]
 
-        f = {'and' : self.family.II.intersection,
-             'or' : self.family.II.union,
-             }[operator]
-    
-        rs = None
+        sets = []
         for word in query:
-            docids = self._fwd_index.get(word, self.family.II.Set())
-            rs = f(rs, docids)
-            
+            docids = self._fwd_index.get(word, self.family.IF.Set())
+            sets.append(docids)
+
+        if operator == 'or':
+            rs = self.family.IF.multiunion(sets)
+        elif operator == 'and':
+            sets.sort(key=len)
+            rs = None
+            for set in sets:
+                rs = self.family.IF.intersection(rs, set)
+                if not rs:
+                    break
+        else:
+            raise TypeError('Keyword index only supports `and` and `or` operators, not `%s`.' % operator)
+        
         if rs:
             return rs
         else:
-            return self.family.II.Set()
+            return self.family.IF.Set()
+
+    def apply(self, query):
+        operator = 'and'
+        if isinstance(query, dict):
+            if 'operator' in query:
+                operator = query.pop('operator')
+            query = query['query']
+        return self.search(query, operator=operator)
 
 class CaseSensitiveKeywordIndex(KeywordIndex):
     """ A case-sensitive keyword index """
